Bug 786068 - make JS_EnterCrossCompartmentCall infallible (and call it JS_EnterCompartment) (r=sfink)